--- a/library-app/package.json
+++ b/library-app/package.json
@@ -10,6 +10,11 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
+    "@fontsource/roboto": "^5.1.0",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
@@ -25,8 +30,8 @@
     "eslint-plugin-react-refresh": "^0.4.14",
     "globals": "^15.11.0",
     "postcss": "^8.4.49",
+    "prettier": "3.3.3",
     "tailwindcss": "^3.4.15",
-    "vite": "^5.4.10",
-    "prettier": "3.3.3"
+    "vite": "^5.4.10"
   }
 }
